force-app/main/default/objects/obcBuildingProject__c/obcBuildingProject__c.object-meta.xml
<CustomObject>
    <label>Outbound Building Project</label>
    <nameField>
        <displayFormat>OBCBP-{00000000}</displayFormat>
        <label>Outbount Building Project</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Building Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>