force-app/main/default/objects/obcBuildingProject__c/fields/Allocation_fabricator_Id__c.field-meta.xml
<CustomField>
    <fullName>Allocation_fabricator_Id__c</fullName>
    <label>Allocation fabricator Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>