force-app/main/default/objects/obcBuildingProject__c/fields/Allocation_system_house__c.field-meta.xml
<CustomField>
    <fullName>Allocation_system_house__c</fullName>
    <label>Allocation system house</label>
    <length>255</length>
    <type>Text</type>
</CustomField>