force-app/main/default/objects/obcBuildingProject__c/fields/Architect_Id__c.field-meta.xml
<CustomField>
    <fullName>Architect_Id__c</fullName>
    <label>Architect Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>