force-app/main/default/objects/obcBuildingProject__c/fields/Building_Authority_Id__c.field-meta.xml
<CustomField>
    <fullName>Building_Authority_Id__c</fullName>
    <label>Building Authority Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>