force-app/main/default/objects/obcBuildingProject__c/fields/Building_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Building_Project_Owner__c</fullName>
    <label>Building Project Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>