force-app/main/default/objects/obcBuildingProject__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>