force-app/main/default/objects/obcBuildingProject__c/fields/ComarchBuildingProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ComarchBuildingProjectNumber__c</fullName>
    <label>Comarch Building Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>