force-app/main/default/objects/obcBuildingProject__c/fields/Construction_End_Planned__c.field-meta.xml
<CustomField>
    <fullName>Construction_End_Planned__c</fullName>
    <label>Construction End Planned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>