force-app/main/default/objects/obcBuildingProject__c/fields/Construction_Start__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start__c</fullName>
    <label>Construction Start</label>
    <length>100</length>
    <type>Text</type>
</CustomField>