force-app/main/default/objects/obcBuildingProject__c/fields/Date_of_Service_Specification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service_Specification__c</fullName>
    <label>Date of Service Specification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>