force-app/main/default/objects/obcBuildingProject__c/fields/Entitled_to_Commission__c.field-meta.xml
<CustomField>
    <fullName>Entitled_to_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project Sales/Responsible</description>
    <label>Entitled to Commission</label>
    <type>Checkbox</type>
</CustomField>