force-app/main/default/objects/obcBuildingProject__c/fields/external_note__c.field-meta.xml
<CustomField>
    <fullName>external_note__c</fullName>
    <label>external note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>