force-app/main/default/objects/obcBuildingProject__c/fields/General_Constructor_Id__c.field-meta.xml
<CustomField>
    <fullName>General_Constructor_Id__c</fullName>
    <label>General Constructor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>