force-app/main/default/objects/obcBuildingProject__c/fields/Inside_Sales_Id__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Id__c</fullName>
    <label>Inside Sales Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>