force-app/main/default/objects/obcBuildingProject__c/fields/internal_note__c.field-meta.xml
<CustomField>
    <fullName>internal_note__c</fullName>
    <label>internal note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>