force-app/main/default/objects/obcBuildingProject__c/fields/Investor_Id__c.field-meta.xml
<CustomField>
    <fullName>Investor_Id__c</fullName>
    <label>Investor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>