force-app/main/default/objects/obcBuildingProject__c/fields/Non_Disclosure_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Non_Disclosure_Agreement__c</fullName>
    <label>Non Disclosure Agreement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>