force-app/main/default/objects/obcBuildingProject__c/fields/Old_Allocation_Fabricator_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Allocation_Fabricator_Id__c</fullName>
    <label>Old Allocation Fabricator Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>