force-app/main/default/objects/obcBuildingProject__c/fields/Old_Allocation_system_house__c.field-meta.xml
<CustomField>
    <fullName>Old_Allocation_system_house__c</fullName>
    <label>Old Allocation system house</label>
    <length>255</length>
    <type>Text</type>
</CustomField>