force-app/main/default/objects/obcBuildingProject__c/fields/Old_Builder_Awarding_Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Builder_Awarding_Office_Id__c</fullName>
    <label>Old Builder/ Awarding Office Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>