force-app/main/default/objects/obcBuildingProject__c/fields/Old_Investor_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Investor_Id__c</fullName>
    <label>Old Investor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>