force-app/main/default/objects/obcBuildingProject__c/fields/Old_Project_Priority__c.field-meta.xml
<CustomField>
    <fullName>Old_Project_Priority__c</fullName>
    <label>Old Project Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>