force-app/main/default/objects/obcBuildingProject__c/fields/Order_Entry__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry__c</fullName>
    <label>Order Entry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>