force-app/main/default/objects/obcBuildingProject__c/fields/Planner_of_cladding_Id__c.field-meta.xml
<CustomField>
    <fullName>Planner_of_cladding_Id__c</fullName>
    <label>Planner of cladding Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>