force-app/main/default/objects/obcBuildingProject__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>Probability (%)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>