force-app/main/default/objects/obcBuildingProject__c/fields/Project_Priority__c.field-meta.xml
<CustomField>
    <fullName>Project_Priority__c</fullName>
    <label>Project Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>