force-app/main/default/objects/obcBuildingProject__c/fields/Project_Sales_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Id__c</fullName>
    <label>Project Sales Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>