force-app/main/default/objects/obcBuildingProject__c/fields/Project_supported__c.field-meta.xml
<CustomField>
    <fullName>Project_supported__c</fullName>
    <label>Project supported</label>
    <length>100</length>
    <type>Text</type>
</CustomField>