force-app/main/default/objects/obcBuildingProject__c/fields/RAICO_specification__c.field-meta.xml
<CustomField>
    <fullName>RAICO_specification__c</fullName>
    <label>RAICO specification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>