force-app/main/default/objects/obcBuildingProject__c/fields/Responsible_VL_VKL__c.field-meta.xml
<CustomField>
    <fullName>Responsible_VL_VKL__c</fullName>
    <label>Responsible VL VKL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>