force-app/main/default/objects/obcBuildingProject__c/fields/Size_1__c.field-meta.xml
<CustomField>
    <fullName>Size_1__c</fullName>
    <label>Size 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>