force-app/main/default/objects/obcBuildingProject__c/fields/Size_2__c.field-meta.xml
<CustomField>
    <fullName>Size_2__c</fullName>
    <label>Size 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>