force-app/main/default/objects/obcBuildingProject__c/fields/Size_3__c.field-meta.xml
<CustomField>
    <fullName>Size_3__c</fullName>
    <label>Size 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>