force-app/main/default/objects/obcBuildingProject__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>Submission Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>