force-app/main/default/objects/obcBuildingProject__c/fields/System_1__c.field-meta.xml
<CustomField>
    <fullName>System_1__c</fullName>
    <label>System 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>