force-app/main/default/objects/obcBuildingProject__c/fields/System_2__c.field-meta.xml
<CustomField>
    <fullName>System_2__c</fullName>
    <label>System 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>