force-app/main/default/objects/obcBuildingProject__c/fields/System_Unit_3__c.field-meta.xml
<CustomField>
    <fullName>System_Unit_3__c</fullName>
    <label>System Unit 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>