force-app/main/default/objects/obcBuildingProject__c/fields/Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>Tender_Type__c</fullName>
    <label>Tender Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>