force-app/main/default/objects/obcBuildingProject__c/fields/Total_Size__c.field-meta.xml
<CustomField>
    <fullName>Total_Size__c</fullName>
    <label>Total Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>